<resources>
    <string name="app_name">E2E4</string>
    <string name="price12regular"><strike>Price 12 Regular</strike></string>
    <string name="deeplink">http://e2e4.ru/{id}</string>
    <string name="nameDB">localDB</string>
    <string name="parseKey">[val]</string>
    <string name="home">Главная</string>
    <string name="catalog">Каталог</string>
    <string name="desires">Желания</string>
    <string name="cart">Корзина</string>
    <string name="menu">Меню</string>
    <string name="qcode">Сканировать</string>
    <string name="search">Поиск</string>
    <string name="searchHistory">История запросов</string>
    <string name="searchClean">Очистить историю</string>
    <string name="searchHistoryEmpty">История отсутствует</string>
    <string name="searchEmpty">Совпадений не найдено</string>
    <string name="searchByCategory">Искать только в данной категории</string>
    <string name="allGoods">Все товары</string>
    <array name="find">
        <item>Найден</item>
        <item>Найдено</item>
    </array>
    <array name="goods">
        <item>товар</item>
        <item>товара</item>
        <item>товаров</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
