<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:orderInCategory="1"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@drawable/ic_document_search"
        android:orderInCategory="2"
        android:title="@string/catalog" />

    <item
        android:id="@+id/navigation_desires"
        android:icon="@drawable/ic_heart"
        android:orderInCategory="3"
        android:title="@string/desires" />

    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/ic_shopping_cart"
        android:orderInCategory="4"
        android:title="@string/cart" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu"
        android:orderInCategory="5"
        android:title="@string/menu" />

</menu>
